Downgrade versions to support H2 per course